src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>CorrectAnswerOptions__c</fullName>
        <label>Correct Answer Options</label>
        <summaryFilterItems>
            <field>AnswerOption__c.IsCorrect__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AnswerOption__c.Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CorrectWeight__c</fullName>
        <label>Correct Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncorrectWeight__c</fullName>
        <label>Incorrect Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrderFormula__c</fullName>
        <formula>IF( Module__r.ShuffleQuestions__c ,
mod( 
    (
       ( value(mid(text(NOW()),18,2)) + value(mid(text(NOW()),12,2)) ) *
       ( value(mid(text(NOW()),18,2)) + value(mid(text(NOW()),15,2)) ) 
    ) / Order__c
    , ( Order__c + 100 )

), Order__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PenaltyPerAttempt__c</fullName>
        <label>Penalty per Attempt %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QuestionText__c</fullName>
        <label>Question Text</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ShuffleAnswerOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shuffle Answer Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalAnswerOptions__c</fullName>
        <label>Total Answer Options</label>
        <summaryForeignKey>AnswerOption__c.Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiple Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Options</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CorrectWeightRange</fullName>
        <active>true</active>
        <description>The Correct Weight must be greater than 0.</description>
        <errorConditionFormula>CorrectWeight__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>CorrectWeight__c</errorDisplayField>
        <errorMessage>The correct weight must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CorrectWeightWhenWeightedQuestions</fullName>
        <active>true</active>
        <description>When Module uses Weighted Questions, the field Correct Weight cannot be null.</description>
        <errorConditionFormula>AND( ISNULL( CorrectWeight__c ) , Module__r.WeightedQuestions__c)</errorConditionFormula>
        <errorDisplayField>CorrectWeight__c</errorDisplayField>
        <errorMessage>A value for correct weight must be specified when the corresponding module uses weighted questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LimitOfAnswers</fullName>
        <active>true</active>
        <description>If the question type is &quot;Statement&quot; no more than two answers can be created.</description>
        <errorConditionFormula>AND( TEXT(Type__c)  = &apos;Statement&apos;,  TotalAnswerOptions__c &gt; 2)</errorConditionFormula>
        <errorMessage>For &quot;Statement&quot; questions, no more than two answers can be created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LimitOfCorrectAnswers</fullName>
        <active>true</active>
        <description>If the question type is &quot;Single choice&quot; or &quot;Statement&quot; only one answer can be marked as &quot;IsCorrect&quot;.</description>
        <errorConditionFormula>AND( OR( TEXT(Type__c)  = &apos;Single Choice&apos;, TEXT(Type__c)   = &apos;Statement&apos; ) , CorrectAnswerOptions__c &gt; 1)</errorConditionFormula>
        <errorMessage>For &quot;Single Choice&quot; and &quot;Statement&quot; questions, only one answer can be marked as correct.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PenaltyPerAttemptRange</fullName>
        <active>true</active>
        <description>Penalty per attempt must have a value  between 0 and 100.</description>
        <errorConditionFormula>OR( PenaltyPerAttempt__c &lt;0, PenaltyPerAttempt__c &gt; 1)</errorConditionFormula>
        <errorMessage>The penalty per attempt must have a value  between 0 and 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QuestionTextRequired</fullName>
        <active>true</active>
        <description>Question text is required.</description>
        <errorConditionFormula>ISBLANK( QuestionText__c )</errorConditionFormula>
        <errorDisplayField>QuestionText__c</errorDisplayField>
        <errorMessage>The question text is required.</errorMessage>
    </validationRules>
</CustomObject>